--- a/ScheduleProject/app/src/main/res/values/colors.xml
+++ b/ScheduleProject/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorCardBackground">#d6dadc</color>
+    <color name="colorForTextButton">#48a868</color>
+    <color name="colorForHeader">#edeff0</color>
 </resources>
