--- a/ScheduleProject/app/src/main/res/values/styles.xml
+++ b/ScheduleProject/app/src/main/res/values/styles.xml
@@ -7,5 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="CardActionButton">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#48a868</item>
+        <item name="android:background">#edeff0</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">start|center</item>
+        <item name="android:paddingLeft">16.0dip</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:drawablePadding">4.0dip</item>
+    </style>
 </resources>
