--- a/ScheduleProject/app/src/main/res/layout/list_card_item.xml
+++ b/ScheduleProject/app/src/main/res/layout/list_card_item.xml
@@ -6,13 +6,13 @@
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="10dp"
     android:layout_margin="8dp"
-    android:background="@color/colorCardBackground">
+    app:cardBackgroundColor="@color/colorCardBackground">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:background="@color/colorCardBackground">
            <RelativeLayout
