--- a/ScheduleProject/app/src/main/res/layout/activity_main.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <androidx.viewpager.widget.ViewPager
+        android:foregroundGravity="center"
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"
-        android:layout_gravity="bottom"
-        android:clipToPadding="false"
+        android:layout_centerInParent="true"
         android:overScrollMode="never"
-        android:paddingBottom="10dp"
-        android:paddingEnd="@dimen/card_padding"
-        android:paddingLeft="@dimen/card_padding"
-        android:paddingRight="@dimen/card_padding"
-        android:paddingStart="@dimen/card_padding" />
-    <Button
-        android:id="@+id/AddlistButton"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"/>
+    <Button
+        android:id="@+id/addListButton"
         android:text="@string/add_list_name"
+        android:textColor="#fff"
+        android:background="@drawable/round"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onAddListClick"
         />
-</LinearLayout>
+</RelativeLayout>
