--- a/ScheduleProject/app/src/main/res/values/dimens.xml
+++ b/ScheduleProject/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="card_padding">60dp</dimen>
+    <dimen name="card_margin">20dp</dimen>
 </resources>
