feature task_update

--- a/ScheduleProject/app/src/main/res/layout/activity_create_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_create_task.xml
@@ -11,9 +11,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingHorizontal="50dp"
-    android:paddingTop="50dp"
+    android:paddingTop="20dp"
     tools:context=".activity.CreateTaskActivity">
 
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="43dp"
+        android:gravity="center"
+        android:text="@string/create_task_header"
+        android:textSize="24sp" />
 
     <EditText
         android:id="@+id/editTextTitle"
@@ -21,7 +29,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/task_create_title"
-
+        android:layout_marginTop="20dp"
         android:inputType="textPersonName" />
 
 
@@ -109,17 +117,8 @@
                     android:checked="false"
                     android:text="@string/task_create_rbtn_done" />
 
-                <RadioButton
-                    android:id="@+id/radioButtonUI2"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
-                    android:checked="false"
-                    android:text="RadioButton" />
             </RadioGroup>
-
         </LinearLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -143,6 +142,13 @@
                 android:layout_width="150dp"
                 android:layout_height="70dp"
                 android:checked="true"
+                android:text="RadioButton" />
+
+            <RadioButton
+                android:id="@+id/radioButtonUI2"
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:checked="false"
                 android:text="RadioButton" />
 
             <RadioButton
