--- a/ScheduleProject/app/src/main/res/layout/card_item.xml
+++ b/ScheduleProject/app/src/main/res/layout/card_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginVertical="5dp">
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/tools"
+        android:id="@+id/itemCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="@color/color_white"
