--- a/ScheduleProject/app/src/main/res/values/colors.xml
+++ b/ScheduleProject/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="colorForStep3">#5ed89b</color>
     <color name="colorGreenTransparent">#e8f5e9</color>
     <color name="colorGreen">#2e7d32</color>
+    <color name="notyetColor">#d68b8b</color>
+    <color name="doingColor">#d6d48b</color>
+    <color name="doneColor">#8bd68c</color>
+    <color name="titleTaskTextColor">#ffffff</color>
 </resources>
