--- a/ScheduleProject/app/src/main/res/layout/activity_notification.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_notification.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ViewTaskActivity">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    tools:context=".activity.NotificationActivity">
 
     <TextView
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="200dp"
-        android:text="@string/task_notfound"
-        android:textSize="18sp" />
-
-</LinearLayout>
+        android:layout_marginStart="176dp"
+        android:layout_marginTop="333dp"
+        android:layout_marginEnd="176dp"
+        android:layout_marginBottom="379dp"
+        android:text="Wellcome to Notification!"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
