--- a/ScheduleProject/app/src/main/res/layout/activity_today_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_today_task.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ViewTaskActivity">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    tools:context=".activity.TodayTaskActivity">
 
     <TextView
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="200dp"
-        android:text="@string/task_notfound"
-        android:textSize="18sp" />
-
-</LinearLayout>
+        android:layout_marginStart="131dp"
+        android:layout_marginTop="316dp"
+        android:layout_marginEnd="132dp"
+        android:layout_marginBottom="366dp"
+        android:text="Welcome to Today Task!"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
