--- a/ScheduleProject/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/ScheduleProject/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,7 +6,7 @@
         android:title="Home" />
     <item
         android:id="@+id/navigation_task"
-        android:icon="@drawable/ic_task"
+        android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="Task" />
     <item
         android:id="@+id/navigation_notifications"
