change bottom navigation "notification" to "about us"

--- a/ScheduleProject/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/ScheduleProject/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="Task" />
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications"
-        android:title="Notification" />
+        android:id="@+id/navigation_aboutus"
+        android:icon="@drawable/ic_about_us"
+        android:title="About Us" />
 </menu>
