Feature take pic and gallery image fixed

--- a/ScheduleProject/app/src/main/res/layout/activity_create_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_create_task.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="false"
-        android:paddingBottom="60dp">
+        android:layout_marginBottom="70dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -228,13 +228,27 @@
                     tools:srcCompat="@tools:sample/avatars[3]" />
             </LinearLayout>
 
-            <Button
-                android:id="@+id/buttonSave"
-                android:layout_width="100dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:onClick="saveBtnAction"
-                android:text="@string/btn_save" />
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/buttonBack_a"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:onClick="backBtnAction"
+                    android:text="@string/btn_back" />
+                <Button
+                    android:id="@+id/buttonSave_a"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:onClick="saveBtnAction"
+                    android:layout_marginLeft="105dp"
+                    android:text="@string/btn_save" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
