--- a/ScheduleProject/app/src/main/res/layout/activity_update_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_update_task.xml
@@ -4,13 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="false"
-    android:paddingBottom="60dp">
+    android:layout_marginBottom="70dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -219,13 +217,28 @@
                 tools:srcCompat="@tools:sample/avatars[3]" />
         </LinearLayout>
 
-        <Button
-            android:id="@+id/buttonSave_u"
-            android:layout_width="100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:onClick="saveBtnAction"
-            android:text="@string/btn_save" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/buttonBack_u"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:onClick="backBtnAction"
+                android:text="@string/btn_back" />
+            <Button
+                android:id="@+id/buttonSave_u"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:onClick="saveBtnAction"
+                android:layout_marginLeft="105dp"
+                android:text="@string/btn_save" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
