--- a/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
@@ -10,7 +10,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="false"
-    android:paddingBottom="20dp">
+    android:layout_marginBottom="70dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -157,7 +157,7 @@
             android:orientation="horizontal"
             android:layout_marginTop="10dp">
             <ImageView
-                android:id="@+id/imageViewProfilePic"
+                android:id="@+id/imageViewProfilePic_v"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:srcCompat="@tools:sample/avatars[3]" />
