--- a/ScheduleProject/app/src/main/res/layout/activity_today_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_today_task.xml
@@ -47,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Today Task List"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
