--- a/ScheduleProject/app/src/main/res/drawable/circle_button.xml
+++ b/ScheduleProject/app/src/main/res/drawable/circle_button.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#7fff00" />
+    <solid android:color="@color/button_1" />
 
     <size
         android:height="40dp"
