--- a/ScheduleProject/app/src/main/res/layout/activity_create_task_inactive.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_create_task_inactive.xml
@@ -6,24 +6,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.CreateTaskActivity">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="50dp"
-        android:text="@string/task_create_inactive"/>
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="300dp"
+        android:text="@string/task_create_inactive"
+        android:textColor="@color/design_default_color_error"
+        android:textSize="18sp" />
 
-
-</LinearLayout>
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/container"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <!-- Main content -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
@@ -33,7 +32,9 @@
             android:background="@color/colorPrimary"
             app:itemIconTint="@color/white"
             app:itemTextColor="@color/white"
-            app:menu="@menu/bottom_navigation_menu"
-            />
+            app:menu="@menu/bottom_navigation_menu" />
     </FrameLayout>
+
+
+</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
