--- a/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
+++ b/ScheduleProject/app/src/main/res/layout/activity_view_task.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="false"
@@ -23,16 +21,21 @@
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="43dp"
             android:gravity="center"
-            android:text="@string/task_detail_header"
-            android:textSize="24sp" />
+            android:text="Task Detail"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewTitle"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
+            android:drawableLeft="@drawable/ic_title"
+            android:drawablePadding="20dp"
+            android:padding="12dp"
             android:ems="10"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -43,6 +46,9 @@
             android:id="@+id/textViewTextDes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:drawableLeft="@drawable/ic_description"
+            android:drawablePadding="20dp"
             android:minHeight="50dp"
             android:textSize="18sp"
             android:ems="10"
@@ -55,6 +61,9 @@
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:textSize="18sp"
+            android:drawableLeft="@drawable/ic_time_black"
+            android:drawablePadding="20dp"
+            android:padding="12dp"
             android:ems="10" />
 
         <LinearLayout
@@ -65,9 +74,9 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="200dp"
+                android:layout_width="89dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:paddingTop="10dp"
                 android:text="@string/task_create_rbtn_status"
                 android:textSize="18sp" />
 
@@ -104,48 +113,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_width="89dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/task_create_priority"
                 android:textSize="18sp" />
 
             <RadioGroup
-                android:layout_width="200dp"
+                android:layout_width="224dp"
                 android:layout_height="wrap_content">
 
                 <RadioButton
                     android:id="@+id/radioButtonUI1"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:checked="true"
-                    android:text="RadioButton" />
+                    android:text="@string/task_priority_1" />
 
                 <RadioButton
                     android:id="@+id/radioButtonUI2"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:checked="false"
-                    android:text="RadioButton" />
+                    android:text="@string/task_priority_2" />
 
                 <RadioButton
                     android:id="@+id/radioButtonUI3"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
                     android:checked="false"
-                    android:text="RadioButton" />
+                    android:text="@string/task_priority" />
 
                 <RadioButton
                     android:id="@+id/radioButtonUI4"
-                    android:layout_width="150dp"
-                    android:layout_height="70dp"
+                    android:layout_width="215dp"
+                    android:layout_height="50dp"
                     android:checked="false"
-                    android:text="RadioButton" />
+                    android:text="@string/task_priority_4" />
             </RadioGroup>
 
         </LinearLayout>
@@ -169,6 +178,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:onClick="backBtnAction"
+            android:background="@drawable/task_button_3"
             android:text="@string/btn_back" />
 
     </LinearLayout>
